[b]Version 0.8.2[/b]:

(2012-11-12)
 * Don't use slices as default, as it seems to cause problems when using
   multiple threads.

(2012-11-08)
 * (Windows) When a new version is run for the first time it tries to
   create a font cache before showing the GUI. Avoids that the font cache
   would be created when the user plays the first video.

(2012-11-05)
 * (Windows) Don't change the priority of the smplayer process. Fixes a
   freeze that may happen on windows xp when you click on the video window.

(2012-11-03)
 * Don't use -fontconfig with mplayer2.

(2012-10-28)
 * Port the umplayer skins to smplayer.

(2012-10-22)
 * Bug fix: stop playback when the user selects to play the next
   item in the playlist and there are no more items to play.

(2012-10-17)
 * Move the main window by dragging in the video area.
   Code copied from umplayer.

(2012-10-05)
 * Add support for 6.1 and 7.1 audio output. Patch by AdrianoML
   (http://smplayer.sourceforge.net/forum/viewtopic.php?f=4&t=5655)

(2012-09-30)
 * Add new section "Privacy" in Preferences -> Interface.
 * Move max. items for recent files to the privacy section.
 * Add an option to remember or not the last directories.
 * Add an option to select the maximum number of items in the
   Open->URL dialog.

(2012-09-28)
 * (Linux) Install larger icons. smplayer.svg contributed by akovia
   (http://smplayer.sourceforge.net/forum/viewtopic.php?f=7&t=5557)

(2012-09-21)
 * Add the option "Report MPlayer crashes" in Preferences -> Advanced.
 * New option for smplayer.ini: time_to_kill_mplayer. Specifies the
   time (in milliseconds) that smplayer should wait before killing
   the mplayer process if the process doesn't teminate on its own
   when the stop button is pressed. Default value: 5000.


[b]Version 0.8.1[/b]:

(2012-09-14)
 * Fix youtube playback.

(2012-08-26)
 * Fix: mplayer2 was not recognized if the name was in lowercase in the
   identification string.

(2012-08-24)
 * Show the background picture on stop.
